@@ -1,5 +1,3 @@
 Just as it begins.
 
-//
-
 So it must end.
