@@ -14,6 +14,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 === Changed
 
 * remove whitespace in front of leading XML comment (so a block comment isn't mistaken for an inline comment)
+* drop empty XML comment unless it comes after a list
 
 == 1.0.0.alpha.13 (2018-08-21) - @mojavelinux
 
